--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {"node": "14.x"},
   "name": "test-server-pb",
   "description": "",
   "version": "1.0.0",
