--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {"node": "14.x"},
+  "engines": {
+    "node": "14.x"
+  },
   "name": "test-server-pb",
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RazanAl-Quran/test-server-pb.git"
